--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@bs/uikit",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Blueshift UI Kit for On-Prem and general reusable react components",
   "main": "lib/index.ts",
+  "dist": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
