--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bs/uikit",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Blueshift UI Kit for On-Prem and general reusable react components",
   "main": "lib/index.ts",
   "dist": {},
@@ -15,7 +15,9 @@
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "gulp": "^4.0.0",
+    "gulp-concat-css": "^3.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-typescript": "^5.0.0",
     "postcss": "^7.0.14",
     "precss": "^4.0.0",
     "ts-loader": "^5.3.3",
