--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat-css": "^3.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-typescript": "^5.0.0",
+    "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
     "precss": "^4.0.0",
     "ts-loader": "^5.3.3",
@@ -29,6 +30,8 @@
   "dependencies": {
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.0.11",
-    "css-selector-tokenizer": "^0.7.1"
+    "css-selector-tokenizer": "^0.7.1",
+    "gulp-sass": "^4.0.2",
+    "postcss-scss": "^2.0.0"
   }
 }
